--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,3 +37,6 @@ jobs:
 
     - name: Run test suite
       run: composer run-script test
+
+    - name: Run PHPStan
+      run: composer run-script phpstan
