fix: change how to parse arguments.

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -40,3 +40,6 @@ jobs:
 
     - name: Run PHPStan
       run: composer run-script phpstan
+
+    - name: Run php-variable-hard-usage
+      run: composer run-script php-variable-hard-usage
