--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     ],
     "require": {
         "php" : ">=8.1",
-        "nikic/php-parser": "^5.2"
+        "nikic/php-parser": "^5.2",
+        "ulrichsg/getopt-php": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
